--- a/cv_project/requirements.txt
+++ b/cv_project/requirements.txt
@@ -5,5 +5,6 @@ gunicorn==23.0.0
 packaging==24.2
 psycopg==3.2.6
 psycopg2-binary==2.9.10
+python-decouple==3.8
 sqlparse==0.5.3
 typing_extensions==4.13.0
